--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/svg">
+  <link rel="shortcut icon" href="./assets/images/hero-banner.png" type="image/svg">
 
   <!--
     - custom css link
@@ -47,7 +47,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/avatar.jpg" alt="Hilario Nengare" width="80" style="border-radius: 15px;">
+          <img src="./assets/images/hero-banner.png" alt="Hilario Nengare" width="80" style="border-radius: 15px;">
         </figure>
 
         <div class="info-content">
@@ -118,7 +118,7 @@
 
         <ul class="social-list">
           <li class="social-item">
-            <a href="www.linkedin.com/in/hilario-nengare-19063120a" class="social-link">
+            <a href="www.linkedin.com/in/hilario-nengare" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
@@ -295,100 +295,6 @@
 
         <!-- Testimonials Section -->
         <section class="testimonials">
-
-          <h3 class="h3 testimonials-title">Testimonials</h3>
-
-          <ul class="testimonials-list has-scrollbar">
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Daniel Lewis" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Hassan from Bilkan Iletisim</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Hilario was hired to revamp our corporate website. We were incredibly impressed with the result. His
-                    expertise
-                    and dedication to understanding our needs were evident throughout the process. The final product was
-                    not only
-                    visually appealing but also user-friendly. We highly recommend his services.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-2.png" alt="Veronica" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Veronica from Stronde</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Hilario helped us redesign our brand's online presence. His creativity and attention to detail were
-                    remarkable.
-                    He listened to our ideas and transformed them into a website that truly represents our brand. The
-                    feedback from
-                    our clients has been overwhelmingly positive.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-3.png" alt="Emily Evans" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily from MBL Hightech</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Hilario was instrumental in creating our new corporate identity. His extensive experience and
-                    client-focused
-                    approach made the process smooth and enjoyable. The end result exceeded our expectations, both in
-                    terms of
-                    aesthetics and functionality.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-4.png" alt="Henry William" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Henry from 3CX</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Hilario delivered an outstanding design for our company. His ability to blend creativity with
-                    functionality is
-                    unparalleled. The new design has significantly improved our user engagement and received numerous
-                    compliments
-                    from our partners and clients.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-          </ul>
 
         </section>
 
