--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
               <span>Jun 2023 — Sep 2023</span>
 
               <p class="timeline-text">
-                Full-stack development in a large microservice codebase following the Kanban methodology with Azure
+                Performed full-stack development in a large microservice codebase following the Kanban methodology with Azure
                 DevOps. Improved portal performance by appr. 2%!
               </p>
 
