--- a/index.html
+++ b/index.html
@@ -440,16 +440,7 @@
                 <span> Jan 2024 — Jul 2024</span>
 
                 <p class="timeline-text">
-                  Designed and developed landing pages focused on enhancing user
-                  experience and improving search engine rankings. Applied SEO
-                  best practices, including optimizing page load speeds, meta
-                  tags, and content structure.Used CSS frameworks such as
-                  Bootstrap and JavaScript libraries like jQuery to streamline
-                  development and ensure cross-browser compatibility. Focused on
-                  delivering smooth user interfaces with attention to detail and
-                  performance optimization. Worked closely with backend
-                  developers to integrate front-end designs with server-side
-                  functionalities.
+                  Nicosia, Cyprus 
                 </p>
               </li>
 
@@ -461,10 +452,7 @@
                 <span>Jul 2023 — Oct 2023</span>
 
                 <p class="timeline-text">
-                  Ensured seamless data flow and communication between front-end
-                  and back-end systems Participated in regular team meetings,
-                  code reviews, and collaborative problem-solving sessions to
-                  improve overall project outcomes.
+                  Nicosia, Cyprus
                 </p>
               </li>
 
@@ -477,14 +465,7 @@
                 <span>Jul 2022 — October 2022</span>
 
                 <p class="timeline-text">
-                  Developed server-side logic and RESTful services using
-                  Node.js, ensuring efficient and scalable back-end solutions.
-                  Created dynamic and interactive user interfaces with React,
-                  optimizing for performance and user experience. Used state
-                  management libraries like Redux to manage application state
-                  and enhance performance. Ensured responsive design and
-                  cross-browser compatibility by employing CSS frameworks and
-                  media queries.
+                  Girne, Kyrenia, Cyprus
                 </p>
               </li>
             </ol>
