--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   -->
     <link
       rel="shortcut icon"
-      href="./assets/images/hero-banner.png"
+      href="./assets/images/profile.jpg"
       type="image/svg"
     />
 
@@ -52,7 +52,7 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
-              src="./assets/images/hero-banner.png"
+              src="./assets/images/profile.jpg"
               alt="Hilario Nengare"
               width="80"
               style="border-radius: 15px"
