--- a/index.html
+++ b/index.html
@@ -437,11 +437,13 @@
                   Stronde (Strategy On Demand) - Frontend Developer
                 </h4>
 
-                <span> Jan 2024 — Jul 2024</span>
+                <span>(Nicosia, Cyprus.hybrid) Jan 2024 — Jul 2024</span>
 
                 <p class="timeline-text">
-                  Nicosia, Cyprus 
-                </p>
+                Here at Stronde I specialized in web page optimization, refurbishing client websites and implementing user interfaces from scratch.
+                This led to a 0.10% increase in user traffic and better browser rankings. Customer satisfaction skyrocketed to a 25% increase by SEO optimization and detail-oriented layout.
+                Leveraged vanilla JavaScript, jQuery and HTML5/CSS3 with industry best practices.
+              </p>
               </li>
 
               <li class="timeline-item">
@@ -449,10 +451,11 @@
                   3CX - Frontend Developer Intern
                 </h4>
 
-                <span>Jul 2023 — Oct 2023</span>
+                <span>(Nicosia, Cyprus.hybrid) Jul 2023 — Oct 2023</span>
 
                 <p class="timeline-text">
-                  Nicosia, Cyprus
+                  Refurbished and implemented features for the 3CX web client. Improved user engagement by 8% through implementation of real-time chat functionality such as notifications and alerts. Leveraged websockets and mainly React.js and Redux.js.
+                  Participated in daily meetings, code reviews and brainstorm sessions which reduced project development time.
                 </p>
               </li>
 
@@ -462,10 +465,11 @@
                   MBL Hightech - Fullstack Developer Intern
                 </h4>
 
-                <span>Jul 2022 — October 2022</span>
+                <span>(Girne, Kyrenia, Cyprus.on-site) Jul 2022 — October 2022</span>
 
                 <p class="timeline-text">
-                  Girne, Kyrenia, Cyprus
+                  Leveraged Postman API, Node.js and postgreSQL to develop RESTful services improving data retrieval speed for fintech apps.
+                  Contributed to the development of real-time monitoring dashboard for providing live system performance metrics and alerts.
                 </p>
               </li>
             </ol>
@@ -535,6 +539,16 @@
 
                 <div class="skill-progress-bg">
                   <div class="skill-progress-fill" style="width: 90%"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">C#</h5>
+                  <data value="50">50%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 50%"></div>
                 </div>
               </li>
               <li class="skills-item">
