--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Stronde (Strategy On Demand) - Frontend Developer
+                  Stronde (Strategy On Demand) - Frontend Developer Intern
                 </h4>
 
                 <span>(Nicosia, Cyprus.hybrid) Mar 2024 — Jul 2024</span>
