--- a/index.html
+++ b/index.html
@@ -434,43 +434,16 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Stronde (Strategy On Demand) - Frontend Developer Intern
-                </h4>
-
-                <span>(Nicosia, Cyprus.hybrid) Mar 2024 — Jul 2024</span>
-
-                <p class="timeline-text">
-                Here at Stronde I specialized in web page optimization, refurbishing client websites and implementing user interfaces from scratch.
-                This led to a 0.10% increase in user traffic and better browser rankings. Customer satisfaction skyrocketed to a 25% increase by SEO optimization and detail-oriented layout.
-                Leveraged vanilla JavaScript, jQuery and HTML5/CSS3 with industry best practices.
-              </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">
-                  3CX - Frontend Developer Intern
+                  Bilkan Bilisim ve Teknoloji - Software Engineer Intern
                 </h4>
 
                 <span>(Nicosia, Cyprus.hybrid) Jul 2023 — Oct 2023</span>
 
                 <p class="timeline-text">
-                  Refurbished and implemented features for the 3CX web client. Improved user engagement by 8% through implementation of real-time chat functionality such as notifications and alerts. Leveraged websockets and mainly React.js and Redux.js.
-                  Participated in daily meetings, code reviews and brainstorm sessions which reduced project development time.
-                </p>
-              </li>
-
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">
-                  MBL Hightech - Fullstack Developer Intern
-                </h4>
-
-                <span>(Girne, Kyrenia, Cyprus.on-site) Jul 2022 — October 2022</span>
-
-                <p class="timeline-text">
-                  Leveraged Postman API, Node.js and postgreSQL to develop RESTful services improving data retrieval speed for fintech apps.
-                  Contributed to the development of real-time monitoring dashboard for providing live system performance metrics and alerts.
-                </p>
+                Here at Bilkan I specialized in web page optimization, refurbishing client websites and implementing user interfaces from scratch.
+                This led to an increase in user traffic and better browser rankings. Customer satisfaction skyrocketed to a 25% increase by SEO optimization and detail-oriented layout.
+                Leveraged vanilla Figma, JavaScript, jQuery, React.js and HTML5/CSS3 with industry best practices.
+              </p>
               </li>
             </ol>
           </section>
