Added nft website

--- a/index.html
+++ b/index.html
@@ -640,6 +640,29 @@
               <li
                 class="project-item active"
                 data-filter-item
+                data-category="Frontend"
+              >
+                <a href="https://hilarionengarejr.github.io/nftc-master/">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/nft.png"
+                      alt="vira"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">NFTC master - landing page for nft website</h3>
+
+                  <p class="project-category">Frontend</p>
+                </a>
+              </li>
+              <li
+                class="project-item active"
+                data-filter-item
                 data-category="Fullstack"
               >
                 <a href="https://reggae-music-player.pages.dev/">
