added to work experience

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <span>2020 — 2024</span>
 
                 <p class="timeline-text">
-                  Major in Computer Software Engineering BSc.
+                  Major in Software Engineering BSc.
                 </p>
               </li>
 
@@ -432,17 +432,30 @@
             </div>
 
             <ol class="timeline-list">
-              <li class="timeline-item">
+              <li class="timeline-item"></li>
                 <h4 class="h4 timeline-item-title">
-                  Bilkan Bilisim ve Teknoloji - Software Engineer Intern
+                  Lambda Research - Software Engineer Intern
                 </h4>
 
-                <span>(Nicosia, Cyprus.hybrid) Jul 2023 — Oct 2023</span>
+                <span>(Cape Town, South Africa.remote) Jul 2023 — Oct 2023</span>
 
                 <p class="timeline-text">
-                Here at Bilkan I specialized in web page optimization, refurbishing client websites and implementing user interfaces from scratch.
-                This led to an increase in user traffic and better browser rankings. Customer satisfaction skyrocketed to a 25% increase by SEO optimization and detail-oriented layout.
-                Leveraged vanilla Figma, JavaScript, jQuery, React.js and HTML5/CSS3 with industry best practices.
+                  Implementing a podcasting system that performs text to speech transformation. Leveraging Machine Learning 
+                  and Python. Partaking in scrum meetings and acing various milestones. Key takeaways are how I am Learning
+                  to perform planning and analysis to streamline a smooth Software Delivery process.
+                </p>
+              </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  Bilkan Bilisim - Software Engineer Intern
+                </h4>
+
+                <span>(Istanbul, Turkiye.remote) Jul 2023 — Oct 2023</span>
+
+                <p class="timeline-text">
+                Here at Bilkan I specialized in web page optimization, refurbishing the main website and implementing some user interfaces from scratch.
+                This led to an increase in user traffic and better browser rankings. Customer satisfaction skyrocketed through SEO optimization and detail-oriented layout.
+                Leveraged vanilla JavaScript, jQuery, React.js and HTML5/CSS3 with industry best practices.
               </p>
               </li>
             </ol>
@@ -486,7 +499,7 @@
               </li>
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">TypeScript</h5>
+                  <h5 class="h5">C++</h5>
                   <data value="80">80%</data>
                 </div>
 
@@ -516,8 +529,8 @@
               </li>
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">C#</h5>
-                  <data value="50">50%</data>
+                  <h5 class="h5">Firebase</h5>
+                  <data value="50">90%</data>
                 </div>
 
                 <div class="skill-progress-bg">
