--- a/index.html
+++ b/index.html
@@ -198,11 +198,12 @@
 
           <section class="about-text">
             <p>
-              I'm a Software and UI/UX Developer. I enjoy turning complex
-              problems into simple, beautiful and intuitive designs.
+              I'm a Software Engineer who enjoys turning complex
+              problems into simple, scalable and robust backend solutions. Experienced in both 
+              Frontend and Backend development.
             </p>
 
-            <p>My mission is to convey your message and
+            <p>Additionally, I can convey your message and
               identity in the most creative and effective way possible. With
               experience designing web solutions for many renowned brands, I am
               committed to bringing your vision to life.
@@ -214,86 +215,82 @@
         -->
 
           <section class="service">
-            <h3 class="h3 service-title">What I Do</h3>
+  <h3 class="h3 service-title">What I Do</h3>
 
-            <ul class="service-list">
-              <li class="service-item">
-                <div class="service-icon-box">
-                  <img
-                    src="./assets/images/icon-design.svg
-                "
-                    alt="design icon"
-                    width="40"
-                  />
-                </div>
+  <ul class="service-list">
+    <li class="service-item">
+      <div class="service-icon-box">
+        <img
+          src="./assets/images/icon-design.svg"
+          alt="design icon"
+          width="40"
+        />
+      </div>
 
-                <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Web design</h4>
+      <div class="service-content-box">
+        <h4 class="h4 service-item-title">UI/UX Design</h4>
 
-                  <p class="service-item-text">
-                    Realizing the most modern but future-proof and high-quality
-                    design at a professional level.
-                  </p>
-                </div>
-              </li>
+        <p class="service-item-text">
+          Crafting intuitive and visually appealing user interfaces that enhance user experience and drive engagement.
+        </p>
+      </div>
+    </li>
 
-              <li class="service-item">
-                <div class="service-icon-box">
-                  <img
-                    src="./assets/images/icon-dev.svg"
-                    alt="Web development icon"
-                    width="40"
-                  />
-                </div>
+    <li class="service-item">
+      <div class="service-icon-box">
+        <img
+          src="./assets/images/icon-dev.svg"
+          alt="Web development icon"
+          width="40"
+        />
+      </div>
 
-                <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Web development</h4>
+      <div class="service-content-box">
+        <h4 class="h4 service-item-title">Frontend Development</h4>
 
-                  <p class="service-item-text">
-                    High-quality development of sites at the professional level
-                    with adherence industry standards.
-                  </p>
-                </div>
-              </li>
+        <p class="service-item-text">
+          Building responsive and high-performance web applications using modern frontend technologies like React, Angular, and Vue.js.
+        </p>
+      </div>
+    </li>
 
-              <li class="service-item">
-                <div class="service-icon-box">
-                  <img
-                    src="./assets/images/icon-app.svg"
-                    alt="mobile app icon"
-                    width="40"
-                  />
-                </div>
+    <li class="service-item">
+      <div class="service-icon-box">
+        <img
+          src="./assets/images/icon-app.svg"
+          alt="mobile app icon"
+          width="40"
+        />
+      </div>
 
-                <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Mobile apps</h4>
+      <div class="service-content-box">
+        <h4 class="h4 service-item-title">Backend Development</h4>
 
-                  <p class="service-item-text">
-                    Professional development of mobile applications.
-                  </p>
-                </div>
-              </li>
+        <p class="service-item-text">
+          Developing scalable and secure server-side applications using Node.js, Python, and Java, ensuring robust API integrations and database management.
+        </p>
+      </div>
+    </li>
 
-              <li class="service-item">
-                <div class="service-icon-box">
-                  <img
-                    src="./assets/images/icon-photo.svg"
-                    alt="camera icon"
-                    width="40"
-                  />
-                </div>
+    <li class="service-item">
+      <div class="service-icon-box">
+        <img
+          src="./assets/images/icon-photo.svg"
+          alt="camera icon"
+          width="40"
+        />
+      </div>
 
-                <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Photography</h4>
+      <div class="service-content-box">
+    <h4 class="h4 service-item-title">Photography</h4>
 
-                  <p class="service-item-text">
-                    Capturing high-quality photos of any category at
-                    professional level.
-                  </p>
-                </div>
-              </li>
-            </ul>
-          </section>
+    <p class="service-item-text">
+      Capturing high-quality photos of any category at a professional level, ensuring memorable and impactful visual experiences.
+    </p>
+  </div>
+    </li>
+  </ul>
+</section>
 
           <!-- Testimonials Section -->
           <section class="testimonials"></section>
@@ -460,146 +457,154 @@
               </li>
             </ol>
           </section>
+<section class="skill">
+  <h3 class="h3 skills-title">My skills</h3>
 
-          <section class="skill">
-            <h3 class="h3 skills-title">My skills</h3>
+  <ul class="skills-list content-card">
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">JavaScript</h5>
+        <data value="90">90%</data>
+      </div>
 
-            <ul class="skills-list content-card">
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Web Development</h5>
-                  <data value="80">80%</data>
-                </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 90%"></div>
+      </div>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 80%"></div>
-                </div>
-              </li>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">HTML/CSS</h5>
+        <data value="90">90%</data>
+      </div>
 
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Web Design</h5>
-                  <data value="70">70%</data>
-                </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 90%"></div>
+      </div>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 70%"></div>
-                </div>
-              </li>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Python</h5>
+        <data value="90">90%</data>
+      </div>
 
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">JavaScript</h5>
-                  <data value="90">90%</data>
-                </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 90%"></div>
+      </div>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 90%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">C++</h5>
-                  <data value="80">80%</data>
-                </div>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Git</h5>
+        <data value="90">90%</data>
+      </div>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 80%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">HTML/CSS</h5>
-                  <data value="90">90%</data>
-                </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 90%"></div>
+      </div>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 90%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Python</h5>
-                  <data value="90">90%</data>
-                </div>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Bootstrap CSS Framework</h5>
+        <data value="85">85%</data>
+      </div>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 90%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Firebase</h5>
-                  <data value="50">90%</data>
-                </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 85%"></div>
+      </div>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 50%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">React JS</h5>
-                  <data value="80">80%</data>
-                </div>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Tailwind CSS Framework</h5>
+        <data value="85">85%</data>
+      </div>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 80%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Next JS</h5>
-                  <data value="75">75%</data>
-                </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 85%"></div>
+      </div>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 75%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Bootstrap CSS Framework</h5>
-                  <data value="85">85%</data>
-                </div>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Web Development</h5>
+        <data value="80">80%</data>
+      </div>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 85%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Tailwind CSS Framework</h5>
-                  <data value="85">85%</data>
-                </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 80%"></div>
+      </div>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 85%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Git</h5>
-                  <data value="90">90%</data>
-                </div>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">C++</h5>
+        <data value="80">80%</data>
+      </div>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 90%"></div>
-                </div>
-              </li>
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Figma</h5>
-                  <data value="60">60%</data>
-                </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 80%"></div>
+      </div>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 60%"></div>
-                </div>
-              </li>
-              
-            </ul>
-          </section>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">React JS</h5>
+        <data value="80">80%</data>
+      </div>
+
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 80%"></div>
+      </div>
+    </li>
+
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Next JS</h5>
+        <data value="75">75%</data>
+      </div>
+
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 75%"></div>
+      </div>
+    </li>
+
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Software Design</h5>
+        <data value="70">70%</data>
+      </div>
+
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 70%"></div>
+      </div>
+    </li>
+
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Figma</h5>
+        <data value="60">60%</data>
+      </div>
+
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 60%"></div>
+      </div>
+    </li>
+
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Firebase</h5>
+        <data value="50">50%</data>
+      </div>
+
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 50%"></div>
+      </div>
+    </li>
+  </ul>
+</section>
         </article>
 
         <!--
