changed the date

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                   Lambda Research - Software Engineer Intern
                 </h4>
 
-                <span>(Cape Town, South Africa.remote) Jul 2023 — Oct 2023</span>
+                <span>(Cape Town, South Africa.remote) Oct 2024 — Present</span>
 
                 <p class="timeline-text">
                   Implementing a podcasting system that performs text to speech transformation. Leveraging Machine Learning 
