--- a/index.html
+++ b/index.html
@@ -429,31 +429,44 @@
             </div>
 
             <ol class="timeline-list">
-              <li class="timeline-item"></li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  Reality AI Lab - UI Engineer Intern
+                </h4>
+                <span>(Remote) Jan 2025 — Mar 2025</span>
+                <p class="timeline-text">
+                  I implemented UIs for e-learning AI software, including MARVEL AI, ensuring intuitive designs and a smooth user experience for AI education.
+                </p>
+              </li>
+
+              <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
                   Lambda Research - Software Engineer Intern
                 </h4>
-
                 <span>(Cape Town, South Africa.remote) Oct 2024 — Present</span>
-
                 <p class="timeline-text">
-                  Implementing a podcasting system that performs text to speech transformation. Leveraging Machine Learning 
-                  and Python. Partaking in scrum meetings and acing various milestones. Key takeaways are how I am Learning
-                  to perform planning and analysis to streamline a smooth Software Delivery process.
+                  I designed and implemented a full-stack e-commerce platform using TypeScript and Next.js. Integrated Yoco for secure payments, streamlined the checkout process, and focused on writing scalable, maintainable code.
                 </p>
               </li>
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  Reality AI Lab - UI Engineer Intern
+                </h4>
+                <span>(Remote) Jan 2024 — Mar 2024</span>
+                <p class="timeline-text">
+                  I implemented UIs for e-learning AI software, including MARVEL AI, ensuring intuitive designs and a smooth user experience for AI education.
+                </p>
+              </li>
+
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
                   Bilkan Bilisim - Software Engineer Intern
                 </h4>
-
                 <span>(Istanbul, Turkiye.remote) Jul 2023 — Oct 2023</span>
-
                 <p class="timeline-text">
-                Here at Bilkan I specialized in web page optimization, refurbishing the main website and implementing some user interfaces from scratch.
-                This led to an increase in user traffic and better browser rankings. Customer satisfaction skyrocketed through SEO optimization and detail-oriented layout.
-                Leveraged vanilla JavaScript, jQuery, React.js and HTML5/CSS3 with industry best practices.
-              </p>
+                  I developed a POS system using Python Flask, PostgreSQL, and HTML5/CSS3. Implemented robust database management, secure transactions, and a user-friendly interface for efficient point-of-sale operations.
+                </p>
               </li>
             </ol>
           </section>
