Fixed index layout

--- a/index.html
+++ b/index.html
@@ -431,11 +431,11 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Reality AI Lab - UI Engineer Intern
+                  Reality AI Lab - JavaScript Developer Intern
                 </h4>
                 <span>(Remote) Jan 2025 — Mar 2025</span>
                 <p class="timeline-text">
-                  I implemented UIs for e-learning AI software, including MARVEL AI, ensuring intuitive designs and a smooth user experience for AI education.
+                  I implemented UIs for e-learning AI software leveraging JavaScript, including MARVEL AI, ensuring intuitive designs and a smooth user experience for AI education.
                 </p>
               </li>
 
@@ -445,17 +445,7 @@
                 </h4>
                 <span>(Cape Town, South Africa.remote) Oct 2024 — Present</span>
                 <p class="timeline-text">
-                  I designed and implemented a full-stack e-commerce platform using TypeScript and Next.js. Integrated Yoco for secure payments, streamlined the checkout process, and focused on writing scalable, maintainable code.
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">
-                  Reality AI Lab - UI Engineer Intern
-                </h4>
-                <span>(Remote) Jan 2024 — Mar 2024</span>
-                <p class="timeline-text">
-                  I implemented UIs for e-learning AI software, including MARVEL AI, ensuring intuitive designs and a smooth user experience for AI education.
+                  I designed and implemented a full-stack e-commerce platform using TypeScript, Next.js and TailwindCSS. Integrated Yoco for secure payments, streamlined the checkout process, and focused on writing scalable, maintainable code.
                 </p>
               </li>
 
