feature: implement a read me

--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
 
           <section class="about-text">
             <p>
-              Full-Stack Software Engineer with expertise in developing scalable web applications and microservices. Specializing in JavaScript/TypeScript ecosystems with a proven track record of delivering robust solutions that drive business value.
+              AI Engineer with expertise in developing and deploying machine learning models and AI-driven solutions. Specializing in Python and JavaScript ecosystems with a proven track record of delivering intelligent systems that drive business value.
             </p>
 
             <p>
-              Demonstrated ability to architect and implement complex systems while maintaining clean code practices and optimal performance. Committed to continuous learning and staying current with emerging technologies to deliver innovative solutions.
+              Demonstrated ability to design and implement scalable AI architectures while maintaining clean code practices and optimal performance. Committed to continuous learning and staying current with advancements in artificial intelligence and machine learning technologies.
             </p>
           </section>
 
