--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
       </div>
 
       <div class="service-content-box">
-        <h4 class="h4 service-item-title">Frontend Development</h4>
+        <h4 class="h4 service-item-title">Machine Learning</h4>
 
         <p class="service-item-text">
-          Architecting responsive web applications using React, Next.js, and modern frontend technologies. Focused on performance optimization, component reusability, and exceptional user experience.
+          Building and deploying machine learning models for predictive analytics, natural language processing, and computer vision. Expertise in frameworks like TensorFlow, PyTorch, and Scikit-learn to deliver intelligent solutions.
         </p>
       </div>
     </li>
@@ -242,10 +242,10 @@
       </div>
 
       <div class="service-content-box">
-        <h4 class="h4 service-item-title">Backend Engineering</h4>
+        <h4 class="h4 service-item-title">Natural Language Processing</h4>
 
         <p class="service-item-text">
-          Developing robust RESTful APIs and microservices using Node.js and Python. Expertise in database design, system architecture, and implementing secure, scalable solutions.
+          Designing and implementing NLP solutions for tasks such as sentiment analysis, text summarization, and chatbot development. Proficient in leveraging libraries like NLTK, SpaCy, and Hugging Face Transformers to process and analyze natural language data effectively.
         </p>
       </div>
     </li>
