--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://hnengare.com/" />
     <meta property="og:title" content="Hilario Jr Nengare – AI Engineer & Full-Stack Developer" />
     <meta property="og:description" content="AI Engineer specializing in machine learning, natural language processing, and scalable system architectures. Experienced in Python, JavaScript, TensorFlow, and modern AI frameworks." />
-    <meta property="og:image" content="https://hnengare.com/assets/images/profile.jpg" />
+    <meta property="og:image" content="https://hnengare.com/assets/images/propic.png" />
     <meta property="og:image:alt" content="Hilario Jr Nengare - AI Engineer" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -35,14 +35,14 @@
     <meta name="twitter:url" content="https://hnengare.com/" />
     <meta name="twitter:title" content="Hilario Jr Nengare – AI Engineer & Full-Stack Developer" />
     <meta name="twitter:description" content="AI Engineer specializing in machine learning, natural language processing, and scalable system architectures. Experienced in Python, JavaScript, TensorFlow, and modern AI frameworks." />
-    <meta name="twitter:image" content="https://hnengare.com/assets/images/profile.jpg" />
+    <meta name="twitter:image" content="https://hnengare.com/assets/images/propic.png" />
     <meta name="twitter:image:alt" content="Hilario Jr Nengare - AI Engineer" />
     
     <!-- Favicon and App Icons -->
-    <link rel="icon" type="image/x-icon" href="./assets/images/profile.jpg" />
-    <link rel="shortcut icon" href="./assets/images/profile.jpg" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="./assets/images/profile.jpg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/profile.jpg" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png" />
+    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./assets/images/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon.png" />
     
     <!-- Theme Color -->
     <meta name="theme-color" content="#1e1e1f" />
@@ -72,7 +72,7 @@
       "alternateName": "Hilario Jr Nengare",
       "jobTitle": "AI Engineer & Full-Stack Software Engineer",
       "description": "AI Engineer specializing in machine learning, natural language processing, and scalable system architectures.",
-      "image": "https://hnengare.com/assets/images/profile.jpg",
+      "image": "https://hnengare.com/assets/images/propic.png",
       "url": "https://hnengare.com",
       "email": "hnengare@icloud.com",
       "telephone": "+27698429552",
@@ -123,7 +123,7 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
-              src="./assets/images/profile.jpg"
+              src="./assets/images/propic.png"
               alt="Hilario Nengare"
               width="80"
               style="border-radius: 15px"
